# poker-eval

./: CMakeLists.txt
examples/: hcmpn.c  pokenum.c
include/: config.h
include/inlines/: eval_omaha.h
lib/: enumerate.c  evx_generate.c
